# GLESRenderDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/demorender/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/demorender/: MainActivity.kt
app/src/main/java/com/example/demorender/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/demorender/: ExampleUnitTest.kt
gleslibrary/: build.gradle
gleslibrary/src/androidTest/java/com/daguo/dayi/: ExampleInstrumentedTest.kt
gleslibrary/src/main/jni/: CMakeLists.txt  GLJNI.c
gleslibrary/src/main/jni/opengl/: GLHelper.cpp  GLHelper.h  Program.cpp  Program.h  ProgramFactory.cpp  ProgramFactory.h  Render.cpp  Render.h  RenderHelper.cpp  RenderHelper.h  Shader.cpp  Shader.h  Textures.cpp  Textures.h
gleslibrary/src/main/jni/opengl/utils/: GLESMath.c  GLESMath.h  Logs.cpp  Logs.h  TCriticalSection.h
gleslibrary/src/main/kotlin/com/daguo/dayi/jni/: GLESRender.kt  GLHelper.kt
gleslibrary/src/test/java/com/daguo/dayi/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle
nativelib/src/main/cpp/: CMakeLists.txt  native-lib.cpp
nativelib/src/main/java/com/example/nativelib/: NativeLib.kt
